feat(metrics): adding service metrics
